# JA-Hedge

./: .dockerignore  .env.example  .gitignore  BUILD_PLAN.md  DASHBOARD_DESIGN.md  RESEARCH.md  Screen Recording 2026-03-24 at 1.39.34 AM.MOV  cloudflare-dns-import.txt  deploy.sh  deploy_phase22.sh  docker-compose.yml  e2e_test.py  push_phase22.sh
backend/: .dockerignore  .venv 2  Dockerfile  analyze_session.py  audit_phase21.py  check_candidates.py  check_live.py  check_phase21.py  check_status.py  debug_candidates.py  deepdive_edges.py  diagnose_accuracy.py  diagnose_profit.py  entrypoint.sh  evaluate_potential.py  explore_edges.py  harvest_candles.py  integration_test.py  maker_edge.py  model_plus_maker.py  pyproject.toml  railway.toml  run_harvest.sh  run_server.py  smoke_test.py  start.sh  start_bg.sh  test_all.sh  test_api.py  test_app_import.py  test_bootstrap.py  test_bootstrap2.py  test_endpoints.py  test_frankenstein.py  test_ml_improvements.py  test_paper_trading.py  test_phase21.py  test_phases.py  test_pipeline.py  test_sports_endpoints.py  (+6 more)
backend/alembic/: env.py
backend/app/: __init__.py  alerts.py  backtesting.py  celery_app.py  config.py  error_handlers.py  logging_config.py  main.py  middleware.py  production.py  state.py
backend/scripts/: analyze_memory.py  analyze_perf.py  analyze_trades.py  analyze_unknown_cats.py  analyze_unknown_cats2.py  analyze_unknown_cats3.py  audit_production.py  audit_status.py  check_deploy.py  check_full_status.py  check_phase25.py  check_phase27.py  check_phase28.py  check_phase28c.py  check_phase31.py  check_portfolio.py  check_prices.py  check_production_data.py  check_recent_trades.py  check_requotes.py  check_status.py  commit_and_push.sh  commit_phase23.sh  commit_phase30.sh  count_kalshi_events.py  count_kalshi_markets.py  deep_analysis.py  deep_cache_analysis.py  deep_status.py  deploy.sh  deploy_autonomous.sh  deploy_free_sources.sh  deploy_phase24.sh  deploy_phase25.sh  deploy_phase25b.sh  deploy_phase25b2.sh  deploy_phase25b3.sh  (+31 more)
(+176 files in other folders)
