[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "jahedge-backend"
version = "0.1.0"
description = "JA Hedge — AI-Powered Kalshi Trading Platform"
requires-python = ">=3.11"

dependencies = [
    # ── Web Framework ──────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-multipart>=0.0.9",

    # ── HTTP Client (async, HTTP/2, connection pooling) ─
    "httpx[http2]>=0.27.0",

    # ── Cryptography (RSA-PSS auth) ────────────────
    "cryptography>=43.0.0",

    # ── Data Validation ────────────────────────────
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # ── Database ───────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",

    # ── Redis ──────────────────────────────────────
    "redis[hiredis]>=5.1.0",

    # ── Task Queue ─────────────────────────────────
    "celery[redis]>=5.4.0",

    # ── ML / AI ────────────────────────────────────
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # ── Scheduling ─────────────────────────────────
    "apscheduler>=3.10.0",

    # ── Logging ────────────────────────────────────
    "structlog>=24.4.0",

    # ── Utilities ──────────────────────────────────
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx",  # for TestClient
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
